--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,17 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+
+
+.card {
+  /* all divs on same line */
+  display: inline;
 }
